--- a/soapbox/Dockerfile.extend
+++ b/soapbox/Dockerfile.extend
@@ -1,6 +1,6 @@
 
 USER root
-RUN apk install unzip
+RUN apk add --no-cache unzip
 USER pleroma
 RUN set -ex; \
     wget "https://gitlab.com/soapbox-pub/soapbox/-/jobs/artifacts/develop/download?job=build-production" -O /tmp/soapbox.zip; \
