[ci skip] Fix mastodon dockerfile

--- a/soapbox/Dockerfile
+++ b/soapbox/Dockerfile
@@ -2,8 +2,8 @@ FROM tootsuite/mastodon:latest
 USER root
 ADD https://gitlab.com/soapbox-pub/soapbox/-/jobs/artifacts/develop/download?job=build-production /tmp/soapbox.zip
 RUN apt install nginx -y
-RUN set -ex;
-    curl -L https://gitlab.com/soapbox-pub/soapbox/-/jobs/artifacts/develop/download?job=build-production -o /tmp/soapbox.zip
+RUN set -ex; \
+    curl -L https://gitlab.com/soapbox-pub/soapbox/-/jobs/artifacts/develop/download?job=build-production -o /tmp/soapbox.zip; \
     apt install unzip -y; \
     unzip -o -d /opt/soapbox /tmp/soapbox.zip; \
     rm /tmp/soapbox.zip; \
