--- a/soapbox/mastodon-nginx.conf
+++ b/soapbox/mastodon-nginx.conf
@@ -20,7 +20,7 @@ upstream streaming {
   server streaming:4000 fail_timeout=0;
 }
 
-proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=CACHE:10m inactive=7d max_size=1g;
+proxy_cache_path /tmp/nginx/cache levels=1:2 keys_zone=CACHE:10m inactive=7d max_size=1g;
 
 server {
   listen 8080 default_server;
