--- a/soapbox/nginx.conf
+++ b/soapbox/nginx.conf
@@ -1,7 +1,7 @@
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
-
+error_log /dev/stderr warn;
 events {
         worker_connections 768;
 }
@@ -14,7 +14,7 @@ http {
 
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
-
+        proxy_temp_path /tmp/nginx/proxy;
         access_log /dev/stdout;
         error_log /dev/stderr warn;
 
