--- a/soapbox/nginx.conf
+++ b/soapbox/nginx.conf
@@ -1,5 +1,5 @@
 worker_processes auto;
-pid /run/nginx.pid;
+pid /tmp/nginx/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 error_log /dev/stderr warn;
 events {
